--- a/CodeStockApp/View/AddView.storyboard
+++ b/CodeStockApp/View/AddView.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -13,17 +14,19 @@
             <objects>
                 <viewController storyboardIdentifier="addview" id="Y6W-OH-hqX" customClass="AddViewController" customModule="CodeStockApp" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pA0-xg-c9Q">
-                                <rect key="frame" x="0.0" y="59" width="393" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pA0-xg-c9Q">
+                                <rect key="frame" x="0.0" y="59" width="430" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="6xB-zI-Enr"/>
+                                </constraints>
                                 <items>
                                     <navigationItem id="9Td-yg-usi">
                                         <barButtonItem key="leftBarButtonItem" style="done" id="92f-M6-BWn">
                                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="YSU-Of-Xnb">
-                                                <rect key="frame" x="16" y="4.6666666666666679" width="87" height="35"/>
+                                                <rect key="frame" x="20" y="4.6666666666666679" width="87" height="35"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Cancel"/>
@@ -34,12 +37,12 @@
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" style="done" id="bTn-sd-VhO">
                                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="APG-Lk-Rx7">
-                                                <rect key="frame" x="290" y="4.6666666666666679" width="87" height="35"/>
+                                                <rect key="frame" x="323" y="4.6666666666666679" width="87" height="35"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Post"/>
                                                 <connections>
-                                                    <action selector="postButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="IrQ-MZ-Wrl"/>
+                                                    <action selector="postButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="zcg-GH-OSN"/>
                                                 </connections>
                                             </button>
                                         </barButtonItem>
@@ -50,37 +53,60 @@
                                 </navigationBarAppearance>
                                 <navigationBarAppearance key="scrollEdgeAppearance"/>
                             </navigationBar>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e35-lF-r7e">
-                                <rect key="frame" x="31" y="119" width="332" height="441"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e35-lF-r7e">
+                                <rect key="frame" x="30" y="119" width="370" height="400"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="400" id="gY3-Tf-rxR"/>
+                                </constraints>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zge-pb-s2s">
-                                <rect key="frame" x="31" y="602" width="332" height="95"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zge-pb-s2s">
+                                <rect key="frame" x="30" y="563" width="370" height="95"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="95" id="FYm-Xc-WCX"/>
+                                </constraints>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EQg-Hl-aEw">
-                                <rect key="frame" x="31" y="568" width="113" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EQg-Hl-aEw">
+                                <rect key="frame" x="30" y="527" width="113" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="fCm-zq-Wti"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Add Picture"/>
                                 <connections>
                                     <action selector="addImageButtonAction:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Yyk-o5-3oO"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kS4-6Q-AYe">
-                                <rect key="frame" x="31" y="705" width="133" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kS4-6Q-AYe">
+                                <rect key="frame" x="30" y="666" width="133" height="28"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="28" id="y0y-jL-mNC"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Select Season"/>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="EQg-Hl-aEw" firstAttribute="top" secondItem="e35-lF-r7e" secondAttribute="bottom" constant="8" symbolic="YES" id="2Oa-Yd-8vm"/>
+                            <constraint firstItem="zge-pb-s2s" firstAttribute="trailing" secondItem="e35-lF-r7e" secondAttribute="trailing" id="CJt-Gn-uRo"/>
+                            <constraint firstItem="e35-lF-r7e" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="Rvj-Hx-uZw"/>
+                            <constraint firstItem="EQg-Hl-aEw" firstAttribute="leading" secondItem="kS4-6Q-AYe" secondAttribute="leading" id="SDM-t8-qGg"/>
+                            <constraint firstItem="pA0-xg-c9Q" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="UWL-Hu-g7G"/>
+                            <constraint firstItem="EQg-Hl-aEw" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="VL8-8P-Cnb"/>
+                            <constraint firstItem="zge-pb-s2s" firstAttribute="centerX" secondItem="e35-lF-r7e" secondAttribute="centerX" id="WvP-U9-Oke"/>
+                            <constraint firstItem="pA0-xg-c9Q" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="aut-Nq-FEH"/>
+                            <constraint firstItem="e35-lF-r7e" firstAttribute="top" secondItem="pA0-xg-c9Q" secondAttribute="bottom" constant="16" id="cux-J1-yZH"/>
+                            <constraint firstItem="zge-pb-s2s" firstAttribute="top" secondItem="EQg-Hl-aEw" secondAttribute="bottom" constant="8" symbolic="YES" id="h0B-yM-y8O"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="e35-lF-r7e" secondAttribute="trailing" constant="30" id="ifw-Ij-bF0"/>
+                            <constraint firstItem="kS4-6Q-AYe" firstAttribute="top" secondItem="zge-pb-s2s" secondAttribute="bottom" constant="8" symbolic="YES" id="kmh-27-J8Q"/>
+                            <constraint firstItem="pA0-xg-c9Q" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="mXm-Js-OA6"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="imageView" destination="e35-lF-r7e" id="H5x-p9-oyw"/>
@@ -90,7 +116,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139.69465648854961" y="-17.605633802816904"/>
+            <point key="canvasLocation" x="139.53488372093022" y="-18.025751072961373"/>
         </scene>
     </scenes>
     <resources>
