--- a/CodeStockApp/View/AddView.storyboard
+++ b/CodeStockApp/View/AddView.storyboard
@@ -60,7 +60,7 @@
                                     <constraint firstAttribute="height" constant="400" id="gY3-Tf-rxR"/>
                                 </constraints>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zge-pb-s2s">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="zge-pb-s2s" customClass="HintTextView" customModule="CodeStockApp" customModuleProvider="target">
                                 <rect key="frame" x="30" y="563" width="370" height="95"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
@@ -117,7 +117,7 @@
                     </view>
                     <connections>
                         <outlet property="imageView" destination="e35-lF-r7e" id="H5x-p9-oyw"/>
-                        <outlet property="memoTextView" destination="zge-pb-s2s" id="75u-sB-wIR"/>
+                        <outlet property="memoTextView" destination="zge-pb-s2s" id="ea9-W7-QQO"/>
                         <outlet property="selectSeasonButton" destination="kS4-6Q-AYe" id="5YE-1M-C1f"/>
                     </connections>
                 </viewController>
